# Airship-MPC

./: .gitignore  install_and_compile.sh
src/codegen/nmpc_blimp_formation_optimizer/: CMakeLists.txt  Cargo.toml  build.rs  example_optimizer.c  nmpc_blimp_formation_optimizer_bindings.h  nmpc_blimp_formation_optimizer_bindings.hpp  optimizer.yml
src/codegen/nmpc_blimp_formation_optimizer/icasadi_nmpc_blimp_formation_optimizer/: Cargo.toml
src/codegen/nmpc_blimp_formation_optimizer/icasadi_nmpc_blimp_formation_optimizer/src/: lib.rs
src/codegen/nmpc_blimp_formation_optimizer/nmpc_blimp_formation_planner/: CMakeLists.txt  package.xml
src/codegen/nmpc_blimp_formation_optimizer/nmpc_blimp_formation_planner/config/: open_params.yaml
src/codegen/nmpc_blimp_formation_optimizer/nmpc_blimp_formation_planner/include/: open_optimizer.hpp
src/codegen/nmpc_blimp_formation_optimizer/nmpc_blimp_formation_planner/launch/: open_optimizer.launch
src/codegen/nmpc_blimp_formation_optimizer/nmpc_blimp_formation_planner/src/: open_optimizer.cpp
src/codegen/nmpc_blimp_formation_optimizer/src/: lib.rs
